版本: 5137 作者: Mars 日期: 2013/7/19 18:28 訊息: 修改 add requirement from Janet , channel list empty add an add new button ---- 異動 : /index.html 異動 : /javascripts/v2/func.index.js 異動 : /javascripts/v2/domready.index.js 異動 : /stylesheets/channel.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5137 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/index.html
+++ b/index.html
@@ -201,6 +201,16 @@
 </script>
 <!-- get-url-tmpl End -->
 
+<!-- channel-list-empty-tmpl Begin -->
+<script id="channel-list-empty-tmpl" type="text/x-jquery-tmpl">
+<li class="clearfix" id="empty-item" >
+    
+        <h2>{{html nn._([cms.global.PAGE_ID, 'episode-list', "You don't have any channel yet"])}}</h2>
+    
+</li>
+</script>
+<!-- channel-list-empty-tmpl End -->
+
 <!-- channel-list-tmpl-item Begin -->
 <script id="channel-list-tmpl-item" type="text/x-jquery-tmpl">
 <li class="clearfix" data-meta="${id}">
