版本: 5140 作者: Mars 日期: 2013/7/24 13:57 訊息: 修改 episode list use v3(prefect-scrollbar) layout fix ---- 異動 : /episode-list.html 異動 : /javascripts/v3/func.episode.js 異動 : /javascripts/v3/domready.episode.js 異動 : /javascripts/v3/domready.get-url.js 異動 : /stylesheetsv3/episode.css 異動 : /stylesheetsv3/perfect-scrollbar.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5140 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/episode-list.html
+++ b/episode-list.html
@@ -5,9 +5,10 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/perfect-scrollbar.css?v=1238" />
+<link rel="stylesheet" href="stylesheetsv3/style.css?v=1238" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1238" />
+<link rel="stylesheet" href="stylesheetsv3/episode.css?v=1238" />
 <title>9x9.tv - Episode list</title>
 </head>
 <body>
@@ -413,6 +414,15 @@
                     </div>
                 </div>
             </div>
+			<div class="check">
+				<div class="btn"></div>
+			    <div class="tip-white">
+                    <p class="left"></p>
+                    <p class="center">No video have problem</p>
+                    <p class="right"></p>    
+                </div>
+                <div class="tip-bottom"></div>
+			</div>
             <h3><a href="${playbackUrl}" target="_blank">${name}</a></h3>
             <div class="btns">
                 <div class="btn-wrap enable">
@@ -467,12 +477,13 @@
 <script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
 <script src="javascripts/libs/json2.min.js?v=1278"></script>
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
+<script src="javascripts/libs/perfect-scrollbar.js?v=1398"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
-<script src="javascripts/v2/func.common.js?v=1278"></script>
-<script src="javascripts/v2/func.get-url.js?v=1278"></script>
-<script src="javascripts/v2/func.episode.js?v=1278"></script>
-<script src="javascripts/v2/domready.common.js?v=1278"></script>
-<script src="javascripts/v2/domready.get-url.js?v=1278"></script>
-<script src="javascripts/v2/domready.episode.js?v=1278"></script>
+<script src="javascripts/v3/func.common.js?v=1398"></script>
+<script src="javascripts/v3/func.get-url.js?v=1398"></script>
+<script src="javascripts/v3/func.episode.js?v=1398"></script>
+<script src="javascripts/v3/domready.common.js?v=1398"></script>
+<script src="javascripts/v3/domready.get-url.js?v=1398"></script>
+<script src="javascripts/v3/domready.episode.js?v=1398"></script>
 </body>
 </html>
