版本: 5150 作者: yifan 日期: 2013/7/26 11:18 訊息: Updated UI changes from UI repo. ---- #  modified:   brand-setting.html #  modified:   channel-add.html #  modified:   channel-setting.html #  modified:   epcurate-curation.html #  modified:   episode-list.html #  new file:   images/ep_invalid.png #  modified:   index.html #  modified:   javascripts/v3/domready.channel.js #  modified:   javascripts/v3/domready.common.js #  modified:   javascripts/v3/domready.episode.js #  modified:   javascripts/v3/domready.get-url.js #  new file:   javascripts/v3/domready.portal.brand.js #  new file:   javascripts/v3/domready.signin.js #  modified:   javascripts/v3/func.channel.js #  modified:   javascripts/v3/func.common.js #  modified:   javascripts/v3/func.episode.js #  modified:   javascripts/v3/func.index.js #  new file:   javascripts/v3/func.portal.brand.js #  new file:   javascripts/v3/func.signin.js #  modified:   signin.html #  modified:   stylesheetsv3/channel.css #  modified:   stylesheetsv3/ep-curation.css #  modified:   stylesheetsv3/episode.css #  modified:   stylesheetsv3/portal.css #  new file:   stylesheetsv3/signin.css #  modified:   stylesheetsv3/style.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5164 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/brand-setting.html
+++ b/brand-setting.html
@@ -5,11 +5,11 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/portal.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/episode.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/portal.css?v=1278" />
 <title>9x9.tv - Brand Setting</title>
 </head>
 <body>
@@ -189,9 +189,9 @@
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
 <script src="javascripts/libs/swfupload/swfupload.js?v=1278"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
-<script src="javascripts/v2/func.common.js?v=1278"></script>
-<script src="javascripts/v2/func.portal.brand.js?v=1278"></script>
-<script src="javascripts/v2/domready.common.js?v=1278"></script>
-<script src="javascripts/v2/domready.portal.brand.js?v=1278"></script>
+<script src="javascripts/v3/func.common.js?v=1278"></script>
+<script src="javascripts/v3/func.portal.brand.js?v=1278"></script>
+<script src="javascripts/v3/domready.common.js?v=1278"></script>
+<script src="javascripts/v3/domready.portal.brand.js?v=1278"></script>
 </body>
 </html>
