--- a/channel-add.html
+++ b/channel-add.html
@@ -138,7 +138,7 @@
     <h2>${nn._([cms.global.PAGE_ID, 'title-func', 'My Channels &gt; Create a new channel'])}</h2>
     <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'title-func', 'Required field'])}</p>
 </div>
-<div id="content-main-wrap">
+<div id="content-main-wrap" class="footer-on">
 <div class="constrain">
 <form name="settingForm" id="settingForm" method="get" action="" data-height="361">
     <input type="hidden" name="isPublic" id="isPublic" value="true" />
