--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -1094,7 +1094,7 @@
         {{if ytDuration > 0}}
             <img src="${imageUrl}" alt="" width="80" height="45" />
         {{else}}
-            <img src="images/thumbnail_box_empty.png" alt="" width="80" height="45" />
+            <img src="images/ep_invalid.png" alt="" width="80" height="45" />
         {{/if}}
         {{if ytDuration > 0}}
             <span class="time"><span class="time-right"><span class="time-middle">${cms.common.formatDuration(duration)}</span></span></span>
