--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -17,7 +17,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>
-<script src="javascripts/libs/nn-sdk.js?v=1278"></script>
+<script src="javascripts/libs/nn-sdk.prototype.js?v=1278"></script>
 <script src="javascripts/libs/respond.min.js"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
@@ -41,6 +41,7 @@
 <script src="javascripts/v3/func.curation.js?v=1278"></script>
 <script src="javascripts/v3/domready.common.js?v=1278"></script>
 <script src="javascripts/v3/domready.curation.js?v=1278"></script>
+<script src="javascripts/v3/cms.youtube-utility.js"></script>
 <title>9x9.tv - Episode Curation - Curation</title>
 </head>
 <body class="scrollable">
@@ -1086,6 +1087,9 @@
             {{/if}}
             {{if isSyndicateLimited}}
                 <a href="#!pid=${id}&ytid=${ytId}" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Not playable on mobile device'])}</span></span></span></span></a>
+            {{/if}}
+            {{if ytDuration <= 0}}
+                <a href="#!pid=${id}&ytid=${ytId}" class="error"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /></span></a>
             {{/if}}
         {{/if}}
     {{/if}}
