版本: 5167 作者: mars 日期: 2013/7/26 17:34 訊息: 修改 episode list use invalid youtube video check ---- 異動 : /episode-list.html 異動 : /javascripts/v3/func.episode.js 異動 : /javascripts/v3/domready.episode.js 異動 : /lang/en.json 異動 : /lang/zj.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5167 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/episode-list.html
+++ b/episode-list.html
@@ -359,11 +359,11 @@
                     </div>
                 </div>
             </div>
-			<div class="check">
-				<div class="ok"></div>
+			<div class="check" data-meta="${id}">
+				<div class="btn" id="yuchk-btn-${id}"></div>
 			    <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center">No video have problem</p>
+                    <p class="center" id="yuchk-msg-${id}">${nn._([cms.global.PAGE_ID, 'episode-list', 'Video check'])}</p>
                     <p class="right"></p>    
                 </div>
                 <div class="tip-bottom"></div>
