版本: 5168 作者: mars 日期: 2013/7/26 17:56 訊息: 修改 episode list use invalid youtube video check , use cms.youtube-utility ---- 異動 : /episode-list.html 異動 : /javascripts/v3/func.episode.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5168 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/episode-list.html
+++ b/episode-list.html
@@ -430,5 +430,6 @@
 <script src="javascripts/v3/domready.common.js?v=1398"></script>
 <script src="javascripts/v3/domready.get-url.js?v=1398"></script>
 <script src="javascripts/v3/domready.episode.js?v=1398"></script>
+<script src="javascripts/v3/cms.youtube-utility.js"></script>
 </body>
 </html>
