版本: 5172 作者: yifan 日期: 2013/7/29 11:11 訊息: * Revised html template for invalid video. * Revised invalid video checking module comments and logic. * Refactored video adding validity check with cms.youtube-utility.js module. * Implemented horizontal scrollbar adding video behavior using perfect scrollbar plugin. * Added multi-lang text. ---- #  modified:   epcurate-curation.html #  modified:   javascripts/v3/cms.youtube-utility.js #  modified:   javascripts/v3/domready.curation.js #  modified:   javascripts/v3/func.curation.js #  modified:   lang/en.json #  modified:   lang/zh.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5180 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -1088,9 +1088,10 @@
             {{if isSyndicateLimited}}
                 <a href="#!pid=${id}&ytid=${ytId}" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Not playable on mobile device'])}</span></span></span></span></a>
             {{/if}}
-            {{if ytDuration <= 0}}
-                <a href="#!pid=${id}&ytid=${ytId}" class="error"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /></span></a>
-            {{/if}}
+        {{/if}}
+    {{else}}
+        {{if isInvalid || isUnplayableVideo || isEmbedLimited || isPrivateVideo}}
+            <a href="#!pid=${id}&ytid=${ytId}" class="error"></a>
         {{/if}}
     {{/if}}
     <p class="order"><!-- dynamic rebuild video number after template render --></p>
@@ -1111,8 +1112,10 @@
             <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Non-embeddable video'])}]</h4>
         {{else isPrivateVideo}}
             <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Private video'])}]</h4>
-        {{else}}
+        {{else isInvalid}}
             <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Invalid video'])}]</h4>
+        {{else isUnplayableVideo}}
+            <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Unplayable video'])}]</h4>
         {{/if}}
     {{/if}}
     <p class="title">
