Fixed Facebook logo and drop down menu spacing bug.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5185 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -253,7 +253,7 @@
             <div class="connected brand hide">
                 <div class="share-item first">
                     <img alt="facebook" src="images/icon_fb.png">
-                    <div class="fmfield">
+                    <div>
                         <div class="select enable">
                             <p class="select-btn"></p>
                             <p class="select-txt"><a href="#" id="surl-text">CTS</a></p>
@@ -351,6 +351,6 @@
 <script src="javascripts/v3/func.common.js?v=1278"></script>
 <script src="javascripts/v3/func.channel.js?v=1278"></script>
 <script src="javascripts/v3/domready.common.js?v=1278"></script>
-<script src="javascripts/v3/domready.channel.js?v=1278"></script>
+<script src="javascripts/v3/domready.channel.js?v=1278"></script> 
 </body>
 </html>
