Added user locale loop up in epcurate-curation.html. Added locale look up plugin.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5212 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -37,6 +37,7 @@
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
 <script src="javascripts/libs/swfupload/swfupload.js?v=1278"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
+<script src="javascripts/v3/cms.locale-utility.js"></script>
 <script src="javascripts/v3/func.common.js?v=1278"></script>
 <script src="javascripts/v3/func.curation.js?v=1278"></script>
 <script src="javascripts/v3/domready.common.js?v=1278"></script>
