版本: 5129 作者: mars 日期: 2013/8/1 10:01 訊息: 1. PCS 4.0 優化列表 4 提示文字"The mobile notification will instant send, when user pressed OK or Enter."改成"If users press OK or Enter, the mobile notification will be send immediately." ---- 異動 : /channel-poi.html 異動 : /epcurate-curation.html 異動 : /lang/en.json 異動 : /lang/zj.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5219 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -864,7 +864,7 @@
                             <h4><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Mobile notification message'])}</h4>
                             <p class="textarea"><span><span><textarea name="notifyMsg" id="instant_msg" cols="80" class="textarea" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input Mobile notification message'])}">${notifyMsg}</textarea></span></span></p>
                             <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'Recommend: less 34 bytes'])}</p>
-                            <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'The mobile notification will instant send, when user pressed OK or Enter.'])}</p>
+                            <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'If users press OK or Enter, the mobile notification will be send immediately.'])}</p>
                         </div>
                     </div>
                 </div>
