版本: 5245 作者: mars 日期: 2013/8/5 11:01 訊息: 1. get-url url format fix , brand >> mso ( request from janet ) 2. channel list get url popup location problem ---- 異動 : /episode-list.html 異動 : /javascripts/v2/domready.get-url.js 異動 : /javascripts/v2/func.get-url.js 異動 : /javascripts/v3/domready.get-url.js 異動 : /javascripts/v3/func.get-url.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5245 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/episode-list.html
+++ b/episode-list.html
@@ -208,7 +208,7 @@
         <div class="input-gray">
             <p class="left"></p>
             <p class="center">
-                <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?brand=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?mso=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
             </p>
             <p class="right"></p>
         </div>
@@ -333,7 +333,7 @@
                     <div class="input-gray">
                         <p class="left"></p>
                         <p class="center">
-                            <input class="textfield srul-text" value="http://www.9x9.tv/view?brand={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                            <input class="textfield srul-text" value="http://www.9x9.tv/view?mso={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
                         </p>
                         <p class="right"></p>
                     </div>
